# iaichain

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT-PLAN.md  IAI_system_design_v1.md  README.md  START.md  USAGE.md  install.sh
.claude/: launch.json
.cursor/rules/: sync-docs.mdc
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/iai-cli/: Cargo.toml
crates/iai-cli/src/: auth.rs  cli.rs  embed.rs  llm.rs  main.rs  orchestrator.rs  relay.rs  storage.rs  upgrade.rs  worktree.rs
crates/iai-cli/src/api/: mod.rs
crates/iai-cli/tests/: cli.rs
crates/iai-core/: Cargo.toml
crates/iai-core/src/: aggregate.rs  decompose.rs  lib.rs  lifecycle.rs  matcher.rs  provider.rs  quality.rs
crates/iai-economic/: Cargo.toml
crates/iai-economic/src/: credit.rs  ledger.rs  lib.rs  market.rs
crates/iai-node/: Cargo.toml
crates/iai-node/src/: lib.rs  registry.rs
design/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  DESIGN.md  console.html  index.html
scripts/: deploy-docs.sh  publish.sh
specs/: STATUS.md
specs/001-task-orchestration/: ARCHIVED.md  data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-task-orchestration/checklists/: requirements.md
specs/001-task-orchestration/contracts/: cli-commands.md  node-contract.md
specs/002-collaborative-task-market/: ARCHIVED.md  contracts.md  data-model.md  design.md
specs/003-open-collab-market/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-phase1.md
specs/003-open-collab-market/checklists/: requirements.md
specs/003-open-collab-market/contracts/: agent.md  node-api.md  relay.md
web/console/: app.js  auth.js  console.html
web/docs/: index.html
web/landing/: app.js  index.html
web/shared/: api.js  design-tokens.css
