[package]
name = "iai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "iai"
path = "src/main.rs"

# 应用层（Client Layer）：clap 子命令 + 本地 HTTP API（axum）+ 内嵌静态前端
[dependencies]
iai-core.workspace = true
iai-node.workspace = true
iai-economic.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true

clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower = "0.5"
rust-embed = "8"
mime_guess = "2"

# 控制台密码与会话：argon2 哈希、rpassword 交互式输入、rand/hex 生成 token
argon2 = "0.5"
rpassword = "7"
rand = "0.8"
hex = "0.4"
sha2 = { workspace = true }
chrono = { workspace = true }

# 在线升级：reqwest (rustls) + tar + flate2
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tar = "0.4"
flate2 = "1"
