[package]
name = "iai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# 核心调度层（IAI Core Layer）：任务生命周期 / 解析 / 分解 / 匹配 / 聚合 / 质量门禁
[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
