[package]
name = "iai-economic"
version.workspace = true
edition.workspace = true
license.workspace = true

# 经济系统层（Economic Layer）：哈希链账本 / 贡献点 / 市场定价
[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
